--- a/eventss/one.html
+++ b/eventss/one.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+    <div>
+        <ul id="images">
+            <li><img width= "200px" id="one" src="https://images.pexels.com/photos/15583987/pexels-photo-15583987/free-photo-of-roof-of-chinese-temple-under-blue-sky.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt=""></a></li>
+            <li><img width = "200px" id="two" src="https://images.pexels.com/photos/18815907/pexels-photo-18815907/free-photo-of-glenorchy-lagoon-new-zealand.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt=""></a></li>
+            <li><img width = "200px" id="three" src="https://images.pexels.com/photos/18854123/pexels-photo-18854123/free-photo-of-el-micalet-valencia.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt=""></li>
+            <li><img width = "200px" id="four" src="https://images.pexels.com/photos/18862148/pexels-photo-18862148/free-photo-of-a-man-standing-in-front-of-a-table-with-chairs.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt=""></li>
+        </ul>
+    </div>    
+</body> 
+<script>
+    document.getElementById("two")
+</script>
 </html>
